re PR c++/20734 (rejects valid pointer to member)

PR c++/20734
	* cp-tree.def (OFFSET_REF): Correct comments.
	* init.c (build_offset_ref): Remove misleading comment.
	* typeck.c (build_unary_op): Handle pointer-to-member creation
	here, rather than ...
	(unary_complex_lvalue): ... here.

	PR c++/20734
	* g++.dg/template/ptrmem13.C: New test.

From-SVN: r97695